Creacion de lista con columnas de infomracion de usarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,26 @@
 server.port=8081
 server.servlet.context-path=/app
 
+spring.output.ansi.enabled=ALWAYS
+
 value.name=michael
 value.apellido=garcia
 value.random=${random}
+
+
+user.email=test@gmail.com
+user.passaword=1245
+user.age=20
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
+
+spring.jpa.show-sql=true
+
+
+#spring.datasource.url=jdbc:h2:men:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
